# Code-Analy

./: CHANGES.md  FAQ.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  SOLUTION_SUMMARY.txt  UNDERSTANDING.md  analyze_your_code.py  config.py  demo_all_features.py  demo_flexibility.py  examples.py  pyproject.toml  sample_code.py  test_functionality.py
src/code_analy/: __init__.py  ai_analyzer.py  analyzer.py  multi_file.py  refactor.py  server.py
tests/: __init__.py  test_analyzer.py  test_new_features.py
