[project]
name = "code-analy"
version = "0.2.0"
description = "Intelligent Code Analysis & Refactoring MCP Server with AI-powered suggestions"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]
ai = [
    "openai>=1.0.0,<2.0.0",
    "anthropic>=0.7.0,<1.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
